--- a/public/src/app/user/user.component.html
+++ b/public/src/app/user/user.component.html
@@ -7,7 +7,7 @@
     <div class="input-group">
       <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" value="116069219">
       <div class="input-group-append">
-        <button class="btn btn-sm btn-primary" (click)="getUserById(116069219)">Get User</button>
+        <button class="btn btn-sm btn-primary" (click)="getUserById()">Get User</button>
       </div>
     </div>
 
@@ -23,38 +23,38 @@
             <div>
               <h6 class="my-0">Display Name</h6>
               <a target="_blank" href="https://www.twitch.tv/{{login}}">
-                <small class="text-muted">{{display_name}}</small>
+                <small class="text-muted">{{user.display_name}}</small>
               </a>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">Broadcaster Type</h6>
-              <small class="text-muted">{{broadcaster_type}}</small>
+              <small class="text-muted">{{user.broadcaster_type}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">Description</h6>
-              <small class="text-muted">{{description}}</small>
+              <small class="text-muted">{{user.description}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">User ID</h6>
-              <small class="text-muted">{{id}}</small>
+              <small class="text-muted">{{user.id}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">User Type</h6>
-              <small class="text-muted">{{type}}</small>
+              <small class="text-muted">{{user.type}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">View Count</h6>
-              <small class="text-muted">{{view_count}}</small>
+              <small class="text-muted">{{user.view_count}}</small>
             </div>
           </li>
         </ul>
@@ -65,13 +65,13 @@
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
                 <h6 class="my-0">Profile Image</h6>
-                <img class="thumbnail" src="{{profile_image_url}}">
+                <img class="thumbnail" src="{{user.profile_image_url}}">
               </div>
             </li>
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
                 <h6 class="my-0">Offline Image</h6>
-                <img class="thumbnail" src="{{offline_image_url}}">
+                <img class="thumbnail" src="{{user.offline_image_url}}">
               </div>
             </li>
           </ul>
