--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -23,38 +23,38 @@
             <div>
               <h6 class="my-0">Display Name</h6>
               <a target="_blank" href="https://www.twitch.tv">
-                <small class="text-muted">{{user.display_name}}</small>
+                <small class="userInfo">{{user.display_name}}</small>
               </a>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">Broadcaster Type</h6>
-              <small class="text-muted">{{user.broadcaster_type}}</small>
+              <small class="userInfo">{{user.broadcaster_type}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">Description</h6>
-              <small class="text-muted">{{user.description}}</small>
+              <small class="userInfo">{{user.description}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">User ID</h6>
-              <small class="text-muted">{{user.id}}</small>
+              <small class="userInfo">{{user.id}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">User Type</h6>
-              <small class="text-muted">{{user.type}}</small>
+              <small class="userInfo">{{user.type}}</small>
             </div>
           </li>
           <li class="list-group-item d-flex justify-content-between lh-condensed">
             <div>
               <h6 class="my-0">View Count</h6>
-              <small class="text-muted">{{user.view_count}}</small>
+              <small class="userInfo">{{user.view_count}}</small>
             </div>
           </li>
         </ul>
@@ -65,13 +65,13 @@
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
                 <h6 class="my-0">Profile Image</h6>
-                <img class="thumbnail" src="">
+                <img class="thumbnail" src="{{user.profile_image_url}}">
               </div>
             </li>
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
                 <h6 class="my-0">Offline Image</h6>
-                <img class="thumbnail" src="">
+                <img class="thumbnail" src="{{user.offline_image_url}}">
               </div>
             </li>
           </ul>
