--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 html,
 body {
-  margin: 0;
-  padding: 0;
-  font-family: Roboto, sans-serif;
-  background-color: #30d5f1;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, sans-serif;
+    background-color: #30d5f1;
 }
 
-#particles-js {
+.background {
     position: absolute;
+    display: block;
     top: 0;
-    bottom: 0;
     left: 0;
-    right: 0;
     z-index: 0;
 }
