--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,10 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
-    background-color: #30d5f1;
+}
+
+h1 {
+    text-align: center;
 }
 
 .background {
@@ -14,5 +17,5 @@ body {
     display: block;
     top: 0;
     left: 0;
-    z-index: 0;
+    z-index: -1;
 }
