--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,81 +1,57 @@
+<div class="bg-dark" style="border-radius: 21px 21px 0 0; height: 200px;">
+    <div style="padding: 50px 50px 0px 50px; font-size: 44px; color: white;">Users</div>
+    <div style="padding: 0px 50px 50px 50px; font-size: 16px; font-weight: lighter; color: white;">Get Twitch user data</div>
+</div>
 <div class="container">
-  <div class="py-5 text-center">
-    <h2>Get Twitch User Data</h2>
-    <p class="lead">Bellow is a method to consume user data from Twitch's API</p>
-  </div>
+    <br />
+    <br />
+    <br />
 
-    <div class="input-group">
-      <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value="116069219" (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
-      <div class="input-group-append">
-        <button class="btn btn-sm btn-primary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get User</button>
-      </div>
-    </div>
+    <!-- Card  -->
+    <div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
 
-
-  <form class="card p-2">
-    <h4 class="d-flex justify-content-between align-items-center mb-3">
-      <span class="text-muted">RESPONSE</span>
-    </h4>
-    <div class="row">
-      <div class="col-md-6 order-md-2 mb-4">
-        <ul class="list-group mb-3">
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Display Name</h6>
-              <a target="_blank" href="https://www.twitch.tv">
-                <small class="userInfo">{{user.display_name}}</small>
-              </a>
+            <!-- Input group -->
+            <div class="input-group">
+                <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value=""
+                    (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
+                </div>
             </div>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Broadcaster Type</h6>
-              <small class="userInfo">{{user.broadcaster_type}}</small>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-8">
+                <h6 class="my-0">Display Name</h6>
+                <a target="_blank" href="https://www.twitch.tv">
+                    <small class="userInfo">{{user.display_name}}</small>
+                </a>
+                <hr>
+                <h6 class="my-0">Broadcaster Type</h6>
+                <small class="userInfo">{{user.broadcaster_type}}</small>
+                <hr>
+                <h6 class="my-0">Description</h6>
+                <small class="userInfo">{{user.description}}</small>
+                <hr>
+                <h6 class="my-0">User ID</h6>
+                <small class="userInfo">{{user.id}}</small>
+                <hr>
+                <h6 class="my-0">User Type</h6>
+                <small class="userInfo">{{user.type}}</small>
+                <hr>
+                <h6 class="my-0">View Count</h6>
+                <small class="userInfo">{{user.view_count}}</small>
             </div>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">Description</h6>
-              <small class="userInfo">{{user.description}}</small>
-            </div>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">User ID</h6>
-              <small class="userInfo">{{user.id}}</small>
-            </div>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">User Type</h6>
-              <small class="userInfo">{{user.type}}</small>
-            </div>
-          </li>
-          <li class="list-group-item d-flex justify-content-between lh-condensed">
-            <div>
-              <h6 class="my-0">View Count</h6>
-              <small class="userInfo">{{user.view_count}}</small>
-            </div>
-          </li>
-        </ul>
-      </div>
-
-      <div class="col-md-6 order-md-2 mb-4">
-          <ul class="list-group mb-3">
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
+            <div class="col-md-4">
                 <h6 class="my-0">Profile Image</h6>
                 <img class="thumbnail" src="{{user.profile_image_url}}">
-              </div>
-            </li>
-            <li class="list-group-item d-flex justify-content-between lh-condensed">
-              <div>
+                <hr>
                 <h6 class="my-0">Offline Image</h6>
                 <img class="thumbnail" src="{{user.offline_image_url}}">
-              </div>
-            </li>
-          </ul>
+            </div>
         </div>
+
     </div>
-  </form>
 </div>
+
