--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
         </div>
       </nav>
 
-        <div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden" >
+        <div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden" >
           <div class="bg-white box-shadow mx-auto" style="width: 80%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
                 <app-user></app-user>
           </div>
