--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,5 +1,6 @@
 .thumbnail {
     max-width: 300px;
+    border-radius: 5px;
 }
 
 .userInfo {
@@ -7,3 +8,5 @@
     color: rgb(75, 75, 75);
     font-weight: lighter;
 }
+
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
