--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import '~bootstrap/dist/css/bootstrap.min.css';
-html,
+html, body {
+    height: 100%;
+}
 body {
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
+    background-color: rgb(243, 243, 243);
 }
-
-h1 {
-    text-align: center;
-}
-
 .background {
     position: absolute;
-    display: block;
     top: 0;
+    bottom: 0;
     left: 0;
+    right: 0;
     z-index: -1;
 }
