Add new page tabs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
           <a class="py-2 d-none d-md-inline-block" href="#">Clips</a>
           <a class="py-2 d-none d-md-inline-block" href="#">Users</a>
           <a class="py-2 d-none d-md-inline-block" href="#">Games</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Chat</a>
+          <a class="py-2 d-none d-md-inline-block" href="#">Bot</a>
 
         </div>
       </nav>
