--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 
-<nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
+<!-- <nav class="site-header sticky-top py-1">
+        <div class="container">
           <a class="py-2" href="#">STREAMER DASHBOARD</a>
           <a class="py-2 d-none d-md-inline-block" href="#">Dashboard</a>
           <a class="py-2 d-none d-md-inline-block" href="#">Channels</a>
@@ -13,7 +13,58 @@
           <a class="py-2 d-none d-md-inline-block" href="#">Bot</a>
 
         </div>
-      </nav>
+      </nav> -->
+
+      <nav class="navbar navbar-expand-lg site-header sticky-top py-1">
+            <div class="container">
+        <a class="navbar-brand" href="#">Streamer Dashboard</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarsExample07">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Channels</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Streams</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Videos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Clips</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Users</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Games</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Chat</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Bot</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+              <div class="dropdown-menu" aria-labelledby="dropdown07">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+    </div>
+    </nav>
 
         <div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden" >
           <div class="bg-white box-shadow mx-auto" style="width: 80%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
