--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,140 +1,156 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">Streamer Dashboard</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
 
-<!-- <nav class="site-header sticky-top py-1">
-        <div class="container">
-          <a class="py-2" href="#">STREAMER DASHBOARD</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Dashboard</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Channels</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Streams</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Videos</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Clips</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Users</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Games</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Chat</a>
-          <a class="py-2 d-none d-md-inline-block" href="#">Bot</a>
-
-        </div>
-      </nav> -->
-
-      <nav class="navbar navbar-expand-lg site-header sticky-top py-1">
-            <div class="container">
-        <a class="navbar-brand" href="#">Streamer Dashboard</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="navbarsExample07">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <div class="collapse navbar-collapse" id="navbar">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Channels</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Streams</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Videos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Clips</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Users</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Games</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Chat</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Bot</a>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown07">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
             </li>
-          </ul>
-        </div>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/channels" routerLinkActive="active">Channels</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/streams" routerLinkActive="active">Streams</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/videos" routerLinkActive="active">Videos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/clips" routerLinkActive="active">Clips</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/games" routerLinkActive="active">Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/chat" routerLinkActive="active">Chat</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/bot" routerLinkActive="active">Bot</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <a class="nav-link" routerLink="/signin" routerLinkActive="active">Sign in</a>
+            <a class="nav-link" routerLink="/signout" routerLinkActive="active">Sign out</a>
+        </ul>
     </div>
-    </nav>
+</nav>
 
-        <div class=" mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden" >
-          <div class="bg-white box-shadow mx-auto" style="width: 80%; border-radius: 21px 21px 21px 21px; padding-bottom: 100px; margin-bottom: 50px;">
-                <app-user></app-user>
-          </div>
+
+        <div class="container">
+            <app-users></app-users>
         </div>
 
 
 
-      <footer class="container py-5">
-        <div class="row">
-          <div class="col-12 col-md">
-                <small class="d-block mb-3 text-muted">&copy; NIZOS 2018</small>
-          </div>
-          <div class="col-6 col-md">
+<footer class="container py-5">
+    <div class="row">
+        <div class="col-12 col-md">
+            <small class="d-block mb-3 text-muted">&copy; NIZOS 2018</small>
+        </div>
+        <div class="col-6 col-md">
             <h5>Features</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Cool stuff</a></li>
-              <li><a class="text-muted" href="#">Random feature</a></li>
-              <li><a class="text-muted" href="#">Team feature</a></li>
-              <li><a class="text-muted" href="#">Stuff for developers</a></li>
-              <li><a class="text-muted" href="#">Another one</a></li>
-              <li><a class="text-muted" href="#">Last time</a></li>
+                <li>
+                    <a class="text-muted" href="#">Cool stuff</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Random feature</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Team feature</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Stuff for developers</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Another one</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Last time</a>
+                </li>
             </ul>
-          </div>
-          <div class="col-6 col-md">
+        </div>
+        <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Resource</a></li>
-              <li><a class="text-muted" href="#">Resource name</a></li>
-              <li><a class="text-muted" href="#">Another resource</a></li>
-              <li><a class="text-muted" href="#">Final resource</a></li>
+                <li>
+                    <a class="text-muted" href="#">Resource</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Resource name</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Another resource</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Final resource</a>
+                </li>
             </ul>
-          </div>
-          <div class="col-6 col-md">
+        </div>
+        <div class="col-6 col-md">
             <h5>Resources</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Business</a></li>
-              <li><a class="text-muted" href="#">Education</a></li>
-              <li><a class="text-muted" href="#">Government</a></li>
-              <li><a class="text-muted" href="#">Gaming</a></li>
+                <li>
+                    <a class="text-muted" href="#">Business</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Education</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Government</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Gaming</a>
+                </li>
             </ul>
-          </div>
-          <div class="col-6 col-md">
+        </div>
+        <div class="col-6 col-md">
             <h5>About</h5>
             <ul class="list-unstyled text-small">
-              <li><a class="text-muted" href="#">Team</a></li>
-              <li><a class="text-muted" href="#">Locations</a></li>
-              <li><a class="text-muted" href="#">Privacy</a></li>
-              <li><a class="text-muted" href="#">Terms</a></li>
+                <li>
+                    <a class="text-muted" href="#">Team</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Locations</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Privacy</a>
+                </li>
+                <li>
+                    <a class="text-muted" href="#">Terms</a>
+                </li>
             </ul>
-          </div>
         </div>
-      </footer>
+    </div>
+</footer>
 
 
-      <!-- Bootstrap core JavaScript
+<!-- Bootstrap core JavaScript
       ================================================== -->
-      <!-- Placed at the end of the document so the pages load faster -->
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
-      <script src="../../assets/js/vendor/popper.min.js"></script>
-      <script src="../../dist/js/bootstrap.min.js"></script>
-      <script src="../../assets/js/vendor/holder.min.js"></script>
-      <script>
-        Holder.addTheme('thumb', {
-          bg: '#55595c',
-          fg: '#eceeef',
-          text: 'Thumbnail'
-        });
-      </script>
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+<script>
+    window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')
 
+</script>
+<script src="../../assets/js/vendor/popper.min.js"></script>
+<script src="../../dist/js/bootstrap.min.js"></script>
+<script src="../../assets/js/vendor/holder.min.js"></script>
+<script>
+    Holder.addTheme('thumb', {
+        bg: '#55595c',
+        fg: '#eceeef',
+        text: 'Thumbnail'
+    });
 
+</script>
