Added signin functionality to front end

--- a/src/app/signin/signin.component.css
+++ b/src/app/signin/signin.component.css
@@ -1,32 +1,26 @@
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css");
+
 .login-block {
-    background: #DE6262;
-    /* fallback for old browsers */
-    background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to bottom, #FFB88C, #DE6262);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     float: left;
     width: 100%;
-    padding: 50px 0;
+    padding: 0px 0;
 }
 
 .banner-sec {
-    background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat left bottom;
+    background: url(https://static.pexels.com/photos/33972/pexels-photo.jpg) no-repeat;
     background-size: cover;
-    min-height: 500px;
-    border-radius: 0 10px 10px 0;
+    min-height: 250px;
+    border-radius: 0 21px 21px 0;
     padding: 0;
 }
 
 .container {
     background: #fff;
-    border-radius: 10px;
-    box-shadow: 15px 20px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 21px;
 }
 
 .carousel-inner {
-    border-radius: 0 10px 10px 0;
+    border-radius: 0 21px 21px 0;
 }
 
 .carousel-caption {
@@ -35,7 +29,7 @@
 }
 
 .login-sec {
-    padding: 50px 30px;
+    padding: 10px 30px;
     position: relative;
 }
 
@@ -47,38 +41,27 @@
     text-align: center;
 }
 
-.login-sec .copy-text i {
-    color: #FEB58A;
-}
-
-.login-sec .copy-text a {
-    color: #E36262;
-}
 
 .login-sec h2 {
+    padding-top: 60px;
     margin-bottom: 30px;
     font-weight: 800;
     font-size: 30px;
-    color: #DE6262;
+    color: rgb(116, 116, 116);
 }
 
 .login-sec h2:after {
     content: " ";
-    width: 100px;
-    height: 5px;
-    background: #FEB58A;
+    height: 2px;
+    background: rgb(114, 114, 114);
     display: block;
     margin-top: 20px;
+    margin-bottom: 80px;
     border-radius: 3px;
     margin-left: auto;
     margin-right: auto
 }
 
-.btn-login {
-    background: #DE6262;
-    color: #fff;
-    font-weight: 600;
-}
 
 .banner-text {
     width: 70%;
@@ -104,4 +87,41 @@
 
 .banner-text p {
     color: #fff;
+}
+
+.box-shadow {
+    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
+}
+
+
+.card-body {
+    -ms-flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    box-flex: 1;
+    flex: 1 1 auto;
+    padding: 0rem;
+}
+
+.twitch-button {
+    background-color: #6441A4;
+    color: white;
+}
+
+.twitch-button-link {
+    text-decoration: none;
+}
+.twitch-button-link:link {
+    text-decoration: none;
+}
+
+.twitch-button-link:visited {
+    text-decoration: none;
+}
+
+.twitch-button-link:active {
+    text-decoration: none;
+}
+
+.twitch-button-link:hover {
+    text-decoration: none;
 }
