--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,7 +46,7 @@
 
 
         <div class="container">
-            <app-users></app-users>
+            <router-outlet></router-outlet>
         </div>
 
 
