Twitch helpers now work

--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -31,7 +31,7 @@
                                         </ol>
                                         <div class="carousel-inner" role="listbox">
                                             <div class="carousel-item active">
-                                                <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
+                                                <img class="d-block img-fluid" src="../../assets//images//signin//DashboardImage.png" alt="First slide">
                                                 <div class="carousel-caption d-none d-md-block">
                                                     <div class="banner-text">
                                                         <h2>Streamer Dashboard</h2>
