--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -14,7 +14,7 @@
 
                     <!-- Input group -->
                     <div class="input-group">
-                        <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value=""
+                        <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value="116069219"
                             (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
                         <div class="input-group-append">
                             <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
@@ -26,30 +26,30 @@
                     <div class="col-md-8">
                         <h6 class="my-0">Display Name</h6>
                         <a target="_blank" href="https://www.twitch.tv">
-                            <small class="userInfo" ng-init="user.display_name='Display name information'">{{user.display_name}}</small>
+                            <small class="userInfo">{{user.display_name}}</small>
                         </a>
                         <hr>
                         <h6 class="my-0">Broadcaster Type</h6>
-                        <small class="userInfo" ng-init="user.broadcaster_type='Broadcaster type information'">{{user.broadcaster_type}}</small>
+                        <small class="userInfo">{{user.broadcaster_type}}</small>
                         <hr>
                         <h6 class="my-0">Description</h6>
-                        <small class="userInfo" ng-init="user.description='Description information'">{{user.description}}</small>
+                        <small class="userInfo">{{user.description}}</small>
                         <hr>
                         <h6 class="my-0">User ID</h6>
-                        <small class="userInfo" ng-init="user.id='Id information'">{{user.id}}</small>
+                        <small class="userInfo">{{user.id}}</small>
                         <hr>
                         <h6 class="my-0">User Type</h6>
-                        <small class="userInfo" ng-init="user.type='Type information'">{{user.type}}</small>
+                        <small class="userInfo">{{user.type}}</small>
                         <hr>
                         <h6 class="my-0">View Count</h6>
-                        <small class="userInfo" ng-init="user.view_count='View count information'">{{user.view_count}}</small>
+                        <small class="userInfo">{{user.view_count}}</small>
                     </div>
                     <div class="col-md-4">
                         <h6 class="my-0">Profile Image</h6>
-                        <img class="thumbnail" ng-init="user.profile_image_url='../../assets/images/TwitchProfileImageTemplate.png'" src="{{user.profile_image_url}}">
+                        <img class="thumbnail" src="{{user.profile_image_url}}">
                         <hr>
                         <h6 class="my-0">Offline Image</h6>
-                        <img class="thumbnail" ng-init="user.offline_image_url='../../assets/images/TwitchOfflineImageTemplate300.png'" src="{{user.offline_image_url}}">
+                        <img class="thumbnail" src="{{user.offline_image_url}}">
                     </div>
                 </div>
 
