--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -8,52 +8,170 @@
         <div class="container">
             <br />
 
+
+
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" data-target="#home" href="users#" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" data-target="#profile" href="users#" role="tab" aria-controls="profile" aria-selected="false">Profile</a>
+                </li>
+              </ul>
+
+
+              <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+
+
+
+
+
+
+
+<!-- Card  -->
+<div class="card-body">
+        <div class="d-flex justify-content-between align-items-center">
+
+            <!-- Input group -->
+            <div class="input-group">
+                <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value="116069219"
+                    (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
+                <div class="input-group-append">
+                    <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-8">
+                <h6 class="my-0">Display Name</h6>
+                <a target="_blank" href="https://www.twitch.tv">
+                    <small class="userInfo">{{user.display_name}}</small>
+                </a>
+                <hr>
+                <h6 class="my-0">Broadcaster Type</h6>
+                <small class="userInfo">{{user.broadcaster_type}}</small>
+                <hr>
+                <h6 class="my-0">Description</h6>
+                <small class="userInfo">{{user.description}}</small>
+                <hr>
+                <h6 class="my-0">User ID</h6>
+                <small class="userInfo">{{user.id}}</small>
+                <hr>
+                <h6 class="my-0">User Type</h6>
+                <small class="userInfo">{{user.type}}</small>
+                <hr>
+                <h6 class="my-0">View Count</h6>
+                <small class="userInfo">{{user.view_count}}</small>
+            </div>
+            <div class="col-md-4">
+                <h6 class="my-0">Profile Image</h6>
+                <img class="thumbnail" src="{{user.profile_image_url}}">
+                <hr>
+                <h6 class="my-0">Offline Image</h6>
+                <img class="thumbnail" src="{{user.offline_image_url}}">
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+                </div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+
+
+
+
+
+
+
             <!-- Card  -->
             <div class="card-body">
-                <div class="d-flex justify-content-between align-items-center">
+                    <div class="d-flex justify-content-between align-items-center">
 
-                    <!-- Input group -->
-                    <div class="input-group">
-                        <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value="116069219"
-                            (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
-                        <div class="input-group-append">
-                            <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
+                        <!-- Input group -->
+                        <div class="input-group">
+                            <input type="text" class="form-control" autocomplete="off" placeholder="USER ID" id="providedUserId" #providedUserId value="116069219"
+                                (keyup.enter)="onEnter(providedUserId.value)" (keyup.enter)="getUserById(userId)">
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-sm btn-secondary" (click)="onEnter(providedUserId.value)" (click)="getUserById(userId)">Get user</button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <br />
-                <div class="row">
-                    <div class="col-md-8">
-                        <h6 class="my-0">Display Name</h6>
-                        <a target="_blank" href="https://www.twitch.tv">
-                            <small class="userInfo">{{user.display_name}}</small>
-                        </a>
-                        <hr>
-                        <h6 class="my-0">Broadcaster Type</h6>
-                        <small class="userInfo">{{user.broadcaster_type}}</small>
-                        <hr>
-                        <h6 class="my-0">Description</h6>
-                        <small class="userInfo">{{user.description}}</small>
-                        <hr>
-                        <h6 class="my-0">User ID</h6>
-                        <small class="userInfo">{{user.id}}</small>
-                        <hr>
-                        <h6 class="my-0">User Type</h6>
-                        <small class="userInfo">{{user.type}}</small>
-                        <hr>
-                        <h6 class="my-0">View Count</h6>
-                        <small class="userInfo">{{user.view_count}}</small>
+                    <br />
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h6 class="my-0">Display Name</h6>
+                            <a target="_blank" href="https://www.twitch.tv">
+                                <small class="userInfo">{{user.display_name}}</small>
+                            </a>
+                            <hr>
+                            <h6 class="my-0">Broadcaster Type</h6>
+                            <small class="userInfo">{{user.broadcaster_type}}</small>
+                            <hr>
+                            <h6 class="my-0">Description</h6>
+                            <small class="userInfo">{{user.description}}</small>
+                            <hr>
+                            <h6 class="my-0">User ID</h6>
+                            <small class="userInfo">{{user.id}}</small>
+                            <hr>
+                            <h6 class="my-0">User Type</h6>
+                            <small class="userInfo">{{user.type}}</small>
+                            <hr>
+                            <h6 class="my-0">View Count</h6>
+                            <small class="userInfo">{{user.view_count}}</small>
+                        </div>
+                        <div class="col-md-4">
+                            <h6 class="my-0">Profile Image</h6>
+                            <img class="thumbnail" src="{{user.profile_image_url}}">
+                            <hr>
+                            <h6 class="my-0">Offline Image</h6>
+                            <img class="thumbnail" src="{{user.offline_image_url}}">
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <h6 class="my-0">Profile Image</h6>
-                        <img class="thumbnail" src="{{user.profile_image_url}}">
-                        <hr>
-                        <h6 class="my-0">Offline Image</h6>
-                        <img class="thumbnail" src="{{user.offline_image_url}}">
-                    </div>
+
                 </div>
 
-            </div>
+
+
+
+
+
+
+
+
+
+
+
+                </div>
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
         </div>
 
     </div>
