--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand nav-link" routerLink="/home" routerLinkActive="active">Streamer Dashboard</a>
+    <a class="navbar-brand nav-link" routerLink="/" routerLinkActive="active">Streamer Dashboard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
-            </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/dashboard" routerLinkActive="active">Dashboard</a>
             </li>
@@ -29,6 +26,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/games" routerLinkActive="active">Games</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/bits" routerLinkActive="active">Bits</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="/chat" routerLinkActive="active">Chat</a>
